// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: CarShopBase
message CarShopBase
{	
	
	
	repeated TCarShopDefine TCarShop = 1; // TCarShop

}

// Defined in table: TCarShop
message TCarShopDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional uint32 ShopId = 2; // 商店标识
	
	
	optional uint32 Carid = 3; // uuid
	
	
	optional uint32 Price = 4; // 售价
	
	
	optional uint32 Nums = 5; // 初始数量

}

