// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TCarBase
message TCarBase
{	
	
	
	repeated TCarDefine TCar = 1; // TCar

}

// Defined in table: TCar
message TCarDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional uint32 Brand = 2; // 品牌
	
	
	optional uint32 Model = 3; // 型号
	
	
	optional uint32 Price = 4; // 价值
	
	
	optional string Des = 5; // 描述
	
	
	optional string path = 6; // 图片路径
	
	
	optional string bigpath = 7; // 图片路径
	
	
	optional uint32 Tyre = 8; // 轮胎id
	
	
	optional uint32 Tank = 9; // 油箱id
	
	
	optional uint32 Trunk = 10; // 后备箱id
	
	
	optional uint32 Engine = 11; // 发动机id
	
	
	optional uint32 Battery = 12; // 电瓶id
	
	
	optional uint32 MaxStar = 13; // 最大星级
	
	
	optional uint32 StarAttrGroup = 14; // 星级套件属性(没有填0)

}

